# n-body-simulations

./: .gitignore  CMakeLists.txt  CSV Parser.cpp  README.md  conan.cmake  conanfile.py  conanfile.txt  data_reader.cpp  main.cpp  n_body_lib.h  notes.md  particle.h  simulator.h
